<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#688A08"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yourquiz.LoginActivity" >

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/yourquiz_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_y="20dp"
        android:src="@drawable/ic_launcher" />
   
   <ImageView
        android:background="@drawable/bordes"
        android:id="@+id/sobre"
        android:contentDescription="@string/sobre_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_y="120dp"
        android:src="@drawable/sobre_img" />
   
   <EditText
        style="@style/Estilo1"
        android:background="@drawable/bordes"
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_x="46dp"
        android:layout_y="120dp"
        android:ems="13"
        android:hint="@string/avizo_correo"
        android:inputType="textEmailAddress" />
   
   <ImageView
        android:background="@drawable/bordes"
        android:id="@+id/candado"
        android:contentDescription="@string/candado_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_y="185dp"
        android:src="@drawable/candado_img" />

    <EditText
        style="@style/Estilo1"
        android:background="@drawable/bordes"
        android:id="@+id/contra"
        android:layout_width="wrap_content"
        android:layout_x="46dp"
        android:layout_y="185dp"
        android:ems="13"
        android:hint="@string/avizo_contra" 
        android:inputType="textPassword" />

    <Button
        style="@style/Estilo2"
        android:background="@drawable/bordes2"
        android:id="@+id/btn_acceder"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="250dp"
        android:text="@string/btn_acceder" />

    <TextView
        android:id="@+id/registro"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="335dp"
        android:text="@string/registro"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/facebook_logo"
        android:contentDescription="@string/facebook_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_x="130dp"
        android:layout_y="330dp"
        android:src="@drawable/facebook_img" />

    <TextView
        android:id="@+id/facebook_login"
        android:background="#5882FA"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:padding="5dp"
        android:layout_x="160dp"
        android:layout_y="330dp"
        android:text="@string/facebook_login"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
</AbsoluteLayout>
